## This is the shared library to be built
lib_LTLIBRARIES = libmodguanxi.la

## Define the source file for the module
libmodguanxi_la_SOURCES = mod_guanxi.cpp podmanager.h podmanager.cpp pod.h pod.cpp util.h util.cpp attributeconsumerservice.h attributeconsumerservice.cpp

## Define that an include directory is required.
INCLUDES = -I@apache_dir@/include -I@apr_dir@/include/apr-1 -I@apr_util_dir@/include

